--- a/scss/page/_landing_page.scss
+++ b/scss/page/_landing_page.scss
@@ -1,159 +1,3 @@
-// import modules
-@import "_fonts";
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-// color code
-$yellow: #ffcd00;
-$blue: #352878;
-$half-blue: #286678;
-$green: #4b7828;
-$zinzar: #602878;
-$half-pink: #fff5cc;
-$half-black: #d1d1d1;
-$little-red: #ff0000;
-$bgWhite: #f6f6f6;
-
-.semiWhite {
-    color: $bgWhite;
-}
-
-// fonts variable
-$bold: ECBold;
-$light: ECLight;
-$medium: ECMedium;
-$regular: ECRegular;
-$semibold: ECSemiBold;
-
-// font class
-.light {
-    font-family: $light;
-}
-.regular {
-    font-family: $regular;
-}
-.medium {
-    font-family: $medium;
-}
-.semiBold {
-    font-family: $semibold;
-}
-.bold {
-    font-family: $bold;
-}
-
-// color class generator
-$color-list: (
-    "yellow": $yellow,
-    "blue": $blue,
-    "half-blue": $half-blue,
-    "green": $green,
-    "zinzar": $zinzar,
-    "half-pink": $half-pink,
-    "half-black": $half-black,
-    "little-red": $little-red,
-    "lateWhite": $bgWhite,
-);
-
-@each $name, $color in $color-list {
-    .#{$name} {
-        color: $color !important;
-    }
-    .bg-#{$name} {
-        background-color: $color !important;
-    }
-}
-// color class
-
-// responsive break points
-$msm: 310px;
-$xs: 425px;
-$sm: 576px;
-$md: 768px;
-$lg: 992px;
-$xl: 1200px;
-$xxl: 1400px;
-$mxl: 1800px;
-
-// mixing section
-@mixin resp($width) {
-    @media only screen and (min-width: $width) {
-        @content;
-    }
-}
-// max responsive
-@mixin mxResp($width) {
-    @media only screen and (max-width: $width) {
-        @content;
-    }
-}
-
-// auto responsive write
-$breakPointLists: 1800px, 1400px, 1200px, 992px, 768px, 576px, 425px, 0px;
-@mixin respLists($propertyName, $propertyValue) {
-    @for $i from 1 to 9 {
-        @include resp(nth($list: $breakPointLists, $n: $i)) {
-            #{$propertyName}: nth($list: $propertyValue, $n: $i);
-        }
-    }
-}
-
-// fluid fonts
-@function strip-unit($value) {
-    @return $value / ($value * 0 + 1);
-}
-
-@mixin font-size($min-vw, $max-vw, $min-font-size, $max-font-size) {
-    $u1: unit($min-vw);
-    $u2: unit($max-vw);
-    $u3: unit($min-font-size);
-    $u4: unit($max-font-size);
-
-    @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
-        & {
-            font-size: $min-font-size;
-            @media screen and (min-width: $min-vw) {
-                font-size: calc(
-                    #{$min-font-size} + #{strip-unit(
-                            $max-font-size - $min-font-size
-                        )} *
-                        (
-                            (100vw - #{$min-vw}) / #{strip-unit(
-                                    $max-vw - $min-vw
-                                )}
-                        )
-                );
-            }
-            @media screen and (min-width: $max-vw) {
-                font-size: $max-font-size;
-            }
-        }
-    }
-}
-
-// font size and line height
-@mixin fsizeHeight($f, $h) {
-    font-size: $f;
-    line-height: $h;
-}
-
-@mixin fSmallToLarge($font-small, $font-large) {
-    @include font-size($msm, $lg, $font-small, $font-large);
-}
-@mixin fLargeToExtraLarge($font-small, $font-large) {
-    @include font-size($lg, $mxl, $font-small, $font-large);
-}
-// minimum to maximum media query
-@mixin minMax($min, $max) {
-    @media only screen and (min-width: $min) and (max-width: $max) {
-        @content;
-    }
-}
-
 // responsive list property  applyer
 
 // global common style ------------------------------
@@ -323,12 +167,7 @@ body {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
         flex-flow: column wrap;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
         justify-content: center;
     }
     @include resp($xl) {
@@ -477,65 +316,6 @@ body {
     line-height: 110%;
 }
 
-// quote section
-.quotes {
-    // texts
-    .texts {
-        line-height: 120%;
-        .quote_text {
-            font-family: 14px;
-            display: inline-block;
-            @include resp($xs) {
-                line-height: 135%;
-            }
-            @include resp($sm) {
-                font-size: 22px;
-                text-align: right !important;
-            }
-            @include resp($md) {
-                font-size: 24px;
-            }
-            @include resp($lg) {
-                font-size: 22px;
-            }
-            @include resp($xl) {
-                font-size: 26.5px;
-            }
-            @include resp($xxl) {
-                font-size: 31px;
-            }
-            @include resp($mxl) {
-                font-size: 38px;
-            }
-        }
-    }
-    // quotes owner
-    .quotes_owner {
-        font-size: 14px;
-        margin-top: 10px;
-        margin-bottom: 0px;
-        @include resp($sm) {
-            text-align: right !important;
-        }
-        @include resp($lg) {
-            margin-top: 31px;
-        }
-        @include fSmallToLarge(14px, 22px);
-        @include resp($xl) {
-            margin-top: 25px;
-            font-size: 25px;
-        }
-        @include resp($xxl) {
-            font-size: 28px;
-            margin-top: 40px;
-        }
-        @include resp($mxl) {
-            font-size: 31px;
-            margin-top: 60px;
-        }
-    }
-}
-
 // most larger headering
 .m_head_wrap {
     h1 {
@@ -543,8 +323,8 @@ body {
         @include fsizeHeight(28px, 112%);
         @include font-size($msm, $lg, 26px, 70px);
         @include resp($lg) {
-            color: black !important;
             font-size: 57px;
+            color: black !important;
         }
         @include resp($xl) {
             font-size: 62px;
@@ -785,12 +565,13 @@ h6 {
                 margin-top: 4px;
             }
             p {
-                line-height: 110%;
+                line-height: 100%;
+                margin-top: 0px!important;
                 color: $yellow;
                 @include resp($lg) {
                     color: $blue !important;
                 }
-                @include font-size($msm, $mxl, 8.5px, 14px);
+                @include font-size($msm, $mxl, 6px, 12px);
             }
         }
     }
@@ -2221,8 +2002,8 @@ main {
         @include resp($md) {
             padding-top: 100px !important;
         }
-        @include resp ($mxl) {
-            padding-top: 160px!important;
+        @include resp($mxl) {
+            padding-top: 160px !important;
         }
         // image section
         .img_wrap {
@@ -2233,34 +2014,34 @@ main {
         // main heading
         .main_heading {
             margin-top: 20px;
-            .section_heading  {
+            .section_heading {
                 @include resp($xl) {
-                    font-size: 47px!important;
+                    font-size: 47px !important;
                 }
                 @include resp($mxl) {
-                    font-size: 60px!important;
+                    font-size: 60px !important;
                 }
             }
             .section_description span {
                 @include resp($xl) {
-                    font-size: 24px!important;
+                    font-size: 24px !important;
                 }
                 @include resp($xxl) {
-                    font-size: 28px!important;
+                    font-size: 28px !important;
                 }
                 @include resp($mxl) {
-                    font-size: 35px!important;
+                    font-size: 35px !important;
                 }
             }
             .section_description .semi-white {
-                @include resp ($xl) {
-                    font-size: 24px!important;
+                @include resp($xl) {
+                    font-size: 24px !important;
                 }
-                @include resp ($xxl) {
-                    font-size: 27px!important;
+                @include resp($xxl) {
+                    font-size: 27px !important;
                 }
-                @include resp ($mxl) {
-                    font-size: 30px!important;
+                @include resp($mxl) {
+                    font-size: 30px !important;
                 }
             }
         }
@@ -2695,27 +2476,26 @@ main {
             width: 60%;
             margin-left: auto;
             margin-right: auto;
-            text-align: right!important;
+            text-align: right !important;
         }
     }
     // text color
     .navbar .navbar-nav .nav-item .nav-link {
         color: white !important;
         display: inline-block;
-
     }
 }
 
-// nav link font size 
-.navbar .navbar-nav .nav-item .nav-link a{
+// nav link font size
+.navbar .navbar-nav .nav-item .nav-link a {
     @include resp(0px) {
-        font-size: 13px!important;
+        font-size: 13px !important;
     }
-    @include resp (420px) {
-        font-size: 15px!important;
+    @include resp(420px) {
+        font-size: 15px !important;
     }
     @include resp($md) {
-        font-size: 16px!important;
+        font-size: 16px !important;
     }
 }
 // navbar button
@@ -2729,5 +2509,5 @@ main {
     @include resp($md) {
         width: 26px;
     }
-    // hover animation 
+    // hover animation
 }
